--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'org.testng:testng:7.5'
 
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
